--- a/client/src/pages/SummaryPage/components/HeroStats.module.css
+++ b/client/src/pages/SummaryPage/components/HeroStats.module.css
@@ -22,8 +22,8 @@
   position: absolute;
   top: 0;
   left: 0;
-  right: 0;
-  height: 3px;
+  bottom: 0;
+  width: 4px;
   background: currentColor;
   opacity: 0.5;
 }
