--- a/client/src/components/portainer/UpgradeChartsModal.module.css
+++ b/client/src/components/portainer/UpgradeChartsModal.module.css
@@ -46,6 +46,21 @@
   }
 }
 
+.embedWrapper {
+  width: 100%;
+  display: block;
+}
+
+.embedInner {
+  background: var(--bg-primary);
+  border-radius: 16px;
+  width: 100%;
+  max-height: none;
+  display: flex;
+  flex-direction: column;
+  border: 1px solid var(--border-color);
+}
+
 .header {
   display: flex;
   align-items: center;
