--- a/client/src/components/portainer/ContainersTab.module.css
+++ b/client/src/components/portainer/ContainersTab.module.css
@@ -69,6 +69,7 @@ body.dark-mode .stackCount {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   gap: 16px;
+  padding-bottom: 20px;
 }
 
 .containersGrid > * {
